--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ function MM_swapImage() { //v3.0
 -AT&T México: operando bajo CDMA (Digital) y EV-DO (3G sobre CDMA), GSM (2G), GPRS (2.5G), EDGE (2.75G), UMTS (3G), HSPA+ (3.9G) y 4G LTE (en algunas ciudades solamente), utiliza también iDEN y HSDPA, con un 73.54% de cobertura en el país.
 Cabe destacar que tras la combinación de las redes iusacell-nextel se complementa la red que ya está unificada</CENTER> </p> <br>
     </div>
-    <div><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image14','','imagenes/compañia2.jpg',1)"><img src="imagenes/compañia.jpg" width="300" height="238" id="Image14"></a></div>
+    <div><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image14','','imagenes/compania2.jpg',1)"><img src="imagenes/compania.jpg" width="300" height="238" id="Image14"></a></div>
   </div>
  </div>  
       </div>
