--- a/index.html
+++ b/index.html
@@ -237,9 +237,10 @@ function MM_swapImage() { //v3.0
   <div data-role="collapsible" data-content-theme="false">
     <h1>Operadores nacionales con red propia.</h1>
      <div>
-      <p><CENTER>-Telcel (subsidiaria de América Móvil): operando bajo TDMA (Análogo y Digital), GSM (2G), GPRS (2.5G), EDGE (2.75G), UMTS (3G), HSPA+ y (LTE) (4G) con un 72.23% de cobertura en el país. <br>
--Movistar: operando también bajo los estándares CDMA (Digital), GSM (2G), GPRS (2.5G), EDGE (2.75G), UMTS (3G), HSDPA (3.5G), HSUPA (3.75G) y LTE (4G) con un 56.78% de cobertura en el país.<br>
--AT&T México: operando bajo CDMA (Digital) y EV-DO (3G sobre CDMA), GSM (2G), GPRS (2.5G), EDGE (2.75G), UMTS (3G), HSPA+ (3.9G) y 4G LTE (en algunas ciudades solamente), utiliza también iDEN y HSDPA, con un 73.54% de cobertura en el país.
+      <p><CENTER>
+      -<a href="http://www.telcel.com/" target="_self">TELCEL</a>(subsidiaria de América Móvil): operando bajo TDMA (Análogo y Digital), GSM (2G), GPRS (2.5G), EDGE (2.75G), UMTS (3G), HSPA+ y (LTE) (4G) con un 72.23% de cobertura en el país. &lt;br&gt; &lt;br&gt;<br>
+-<a href="https://www.movistar.com/es/" target="_self">MOVISTAR</a>: operando también bajo los estándares CDMA (Digital), GSM (2G), GPRS (2.5G), EDGE (2.75G), UMTS (3G), HSDPA (3.5G), HSUPA (3.75G) y LTE (4G) con un 56.78% de cobertura en el país. &lt;br&gt; &lt;br&gt;<br>
+-<a href="https://www.att.com.mx/" target="_self">AT&T </a>: operando bajo CDMA (Digital) y EV-DO (3G sobre CDMA), GSM (2G), GPRS (2.5G), EDGE (2.75G), UMTS (3G), HSPA+ (3.9G) y 4G LTE (en algunas ciudades solamente), utiliza también iDEN y HSDPA, con un 73.54% de cobertura en el país.
 Cabe destacar que tras la combinación de las redes iusacell-nextel se complementa la red que ya está unificada</CENTER> </p> <br>
     </div>
     <div><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image14','','imagenes/compania2.jpg',1)"><img src="imagenes/compania.jpg" width="300" height="238" id="Image14"></a></div>
